--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <ul>
       <li><button onclick="play_w9999()">Play w9999</button></li>
+      <li><button onclick="play_n0()">Play n0</button></li>
     </ul>
   </body>
 </html>
