--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
       <li><button onclick="play_w9999()">Play w9999</button></li>
       <li><button onclick="play_n0()">Play n0</button></li>
+      <li><button onclick="play_n1()">Play n1</button></li>
     </ul>
   </body>
 </html>
